--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,16 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+
+spring.datasource.url=jdbc:h2:file:./test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=sa
+
+
+# H2 Console configuration
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Hibernate configuration
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create
+
+jwt.secret = Hea|thPr0L3nk*
